--- a/styles/footer.css
+++ b/styles/footer.css
@@ -1,5 +1,6 @@
 footer li {
     float: none;
+    padding: 2px;
 }
 footer ul li a {
     text-decoration-line: none;
@@ -17,4 +18,16 @@ footer ul li a:hover {
 .footer-padding {
     padding-top: 46px;
     padding-bottom: 46px;
+}
+ul.payingmethods li {
+    float: left;
+    padding: 0px;
+    margin-right: 24px;
+    margin-bottom: 16px;
+}
+footer h3 {
+    padding-bottom: 16px;
+}
+.yourbenefits img {
+    padding-right: 6px;
 }
