--- a/css/header.css
+++ b/css/header.css
@@ -5,6 +5,7 @@
     font-family: 'Open Sans', sans-serif;
     padding: 0;
     margin: 0;
+    box-sizing: border-box;
 }
 .page-wrapper {
     width: 100%;
@@ -14,6 +15,10 @@
     margin: 0 auto;
     display: flex;
     flex-direction: row;
+}
+.vertical-padding {
+    padding-top: 36px;
+    padding-bottom: 40px;
 }
 .box {
     flex-grow: 1;
@@ -65,6 +70,11 @@ ul {
     padding: 0;
     overflow: hidden;
 }  
+ul.space-between {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
 li {
     float: left;
 }  
@@ -111,4 +121,7 @@ h1 {
 }
 .padding-left {
     padding-left: 16px;
+}
+.welcome-title {
+    font-size: 32px;
 }
