--- a/css/signup.css
+++ b/css/signup.css
@@ -6,13 +6,15 @@
     padding-top: 36px;
     text-align: center;
 }
-
+.signup-form {
+    width: 100%;
+}
 .signup-section {
     width: 38%;
     margin: 0 auto;
     display: flex;
     justify-content: space-between;
-    gap: 2%;
+    gap: 4%;
 }
 input {
     width: 100%;
@@ -63,7 +65,7 @@ form h2 {
     display: flex;
     justify-content: space-between;
     gap: 2%;
-    margin-top: 12px;
+    margin-top: 6px;
 }
 
 input[type=submit] {
@@ -74,6 +76,7 @@ input[type=submit] {
     border-radius: 36px;
     font-size: 16px;
     transition: 0.3s;
+    font-weight: 700;
 }
 
 input[type=reset] {
@@ -84,6 +87,7 @@ input[type=reset] {
     border-radius: 36px;
     font-size: 16px;
     transition: 0.3s;
+    font-weight: 700;
 }
 
 input[type=submit]:hover {
