--- a/css/catalog.css
+++ b/css/catalog.css
@@ -3,6 +3,7 @@
     margin: 0 auto;
     padding-top: 24px;
     padding-bottom: 24px;
+    text-align: center;
 }
 .categories-wrapper{
     text-align: left;
