--- a/css/administration.css
+++ b/css/administration.css
@@ -7,7 +7,9 @@
     margin: 0;
     box-sizing: border-box;
 }
-
+:root {
+    --main-blue-color: #17a4e5; /* #46B1C9; */
+}
 .page-wrapper {
     width: 100%;
 }
@@ -33,6 +35,12 @@
 .box {
     flex-grow: 1;
     flex-basis: 0;
+}
+.main-logo {
+    flex-grow: 0;
+    padding: 5px;
+    width: 300px;
+    text-align: center;
 }
 
 section {
@@ -97,7 +105,7 @@ ul.text-black li a {
 }
 
 ul li a:hover {
-    color: #46B1C9;
+    color: var(--main-blue-color);
     transition: 0.15s;
 }
 
