--- a/css/header.css
+++ b/css/header.css
@@ -6,11 +6,30 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
 }
 
 :root {
     --main-blue-color: #17a4e5;
     /* #46B1C9; */
+}
+
+/* Scrollbar */
+::-webkit-scrollbar {
+    width: 12px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+
+::-webkit-scrollbar-thumb {
+    background: var(--main-blue-color);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: var(--main-blue-color);
 }
 
 .page-wrapper {
