--- a/css/highlightedproducts.css
+++ b/css/highlightedproducts.css
@@ -2,8 +2,9 @@
     display: flex;
     justify-content: space-between;
     gap: 4%;
-    width: 90%;
+    width: 75%;
     margin: 0 auto;
+    margin-bottom: 48px;
 }
 
 .product {
@@ -17,18 +18,56 @@
     background-size: contain;
     margin-bottom: 16px;
 }
+
 .products-section {
     text-align: center;
     width: 100%;
 }
+
 .products-title {
     width: 50%;
     margin: 0 auto;
 }
+
 .product h3 {
+    font-size: 14px;
     font-weight: 400;
     text-align: left;
 }
+
 .product h1 {
     text-align: left;
+    font-size: 24px;
+}
+
+.product h2 {
+    text-align: left;
+    font-size: 20px;
+    font-weight: 700;
+}
+
+.product h3.salesCount {
+    font-size: 14px;
+    text-align: left;
+    font-weight: 400;
+    color: grey;
+}
+
+h1.text-decoration-line {
+    text-decoration: line-through;
+    color: grey;
+    font-weight: 400;
+    text-decoration-color: var(--main-blue-color);
+}
+
+h1.left {
+    float: left;
+}
+
+h1.right {
+    float: right;
+}
+
+.prices {
+    overflow: hidden;
 }
