--- a/css/administration.css
+++ b/css/administration.css
@@ -7,9 +7,29 @@
     margin: 0;
     box-sizing: border-box;
 }
-:root {
-    --main-blue-color: #17a4e5; /* #46B1C9; */
+
+/* Scrollbar */
+::-webkit-scrollbar {
+    width: 12px;
 }
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+  }
+
+::-webkit-scrollbar-thumb {
+    background: var(--main-blue-color);
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: var(--main-blue-color);
+}
+
+:root {
+    --main-blue-color: #17a4e5;
+    /* #46B1C9; */
+}
+
 .page-wrapper {
     width: 100%;
 }
@@ -36,6 +56,7 @@
     flex-grow: 1;
     flex-basis: 0;
 }
+
 .main-logo {
     flex-grow: 0;
     padding: 5px;
@@ -167,31 +188,56 @@ input[type=submit]:hover {
     gap: 5%;
     margin-top: 24px;
 }
+
 .single-element-left {
     flex-basis: 33.3333%;
 }
+
 .single-element-left h2 {
     text-align: left;
     font-weight: 500;
     font-size: 24px;
 }
+
 .single-element-right {
     flex-basis: 66.6666%;
 }
+
 .single-element-right h2 {
     text-align: left;
     font-weight: 500;
     font-size: 24px;
 }
+
 .main-logo {
     display: flex;
     justify-content: center;
-    transition: 0.3s;
 }
 
-.main-logo:hover {
-    transform: rotate(-4deg) scale(94%);
-    transition: 0.3s;
+.back-to-top {
+    position: fixed;
+    bottom: 24px;
+    right: 24px;
+    width: 48px;
+    height: 48px;
+    display: none;
+    background-color: var(--main-blue-color);
+    border-radius: 50%;
+    transition: opacity 0.15s ease-in-out;
+}
+
+.back-to-top:hover {
+    opacity: 0.8;
+}
+
+.show-back-to-top {
+    display: block;
+}
+
+.back-to-top img {
+    transform: scaleY(-1);
+    margin-top: 10px;
+    margin-left: 12px;
 }
 
 /* Product management */
