--- a/css/filteredproducts.css
+++ b/css/filteredproducts.css
@@ -4,13 +4,54 @@
     padding-top: 36px;
     padding-bottom: 36px;
     margin: 0 auto;
+    overflow: hidden;
 }
-.filtered-products-bottom {
-    width: 75%;
-    padding-top: 36px;
-    padding-bottom: 36px;
-    margin: 0 auto;
+
+.filtered-products-left {
+    float: left;
+    width: 30%;
 }
+
+.filtered-products-right {
+    float: right;
+    width: 70%;
+}
+
 .sorting-button {
-    width: 20%;
+    width: 100%;
+}
+
+.product-category-div {
+    display: flex;
+    text-align: left;
+}
+
+.product-category-title {
+    font-weight: 500;
+    font-size: 36px;
+    padding-right: 24px;
+}
+
+.product-category-count {
+    color: gray;
+    font-weight: 500;
+    font-size: 36px;
+}
+
+form.sorting-form select {
+    width: 100%;
+    padding: 12px;
+    margin-bottom: 12px;
+    font-size: 14px;
+    background-image: url("../images/DropdownIcon.png");
+    background-position: 94%;
+    background-size: 14px;
+    background-repeat: no-repeat;
+    appearance: none;
+    color: grey;
+}
+
+hr {
+    margin: 24px 0px;
+    width: 100%;
 }
