--- a/css/filteredproducts.css
+++ b/css/filteredproducts.css
@@ -200,25 +200,31 @@ a.product-link {
     transition: 0.15s;
 }
 
+div.filtered-products-title {
+    transition: 0.15s;
+}
+
 a.product-link:hover .filtered-products-title {
     color: var(--main-blue-color);
-    transition: 0.15s;
 }
 
 div.position-relative {
     position: relative;
 }
+
 div.bottom-div {
     position: absolute;
     bottom: 0;
     width: 100%;
 }
+
 img.action-buttons {
     transition: 0.15s;
     cursor: pointer;
     margin-left: 8px;
     filter: grayscale(100);
 }
+
 img.action-buttons:hover {
     transition: 0.15s;
     filter: grayscale(0);
