--- a/css/product.css
+++ b/css/product.css
@@ -3,10 +3,34 @@ div.product-section-wrapper {
     margin: 0 auto;
     display: flex;
     gap: 4%;
+    padding-top: 24px;
 }
+
 div.product-title-image {
-    flex-basis: 60%;
+    flex-basis: 50%;
 }
+
 div.product-action-price {
     flex-grow: 1;
+}
+
+div.product-title h1.manufacturer {
+    font-size: 36px;
+    font-weight: 300;
+}
+
+div.product-title h1.name {
+    font-size: 36px;
+    font-weight: 700;
+}
+
+div.manufacturer-logo {
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 480px;
+}
+div.product-action-price h1.price {
+    font-size: 60px;
 }
