--- a/css/highlightedproducts.css
+++ b/css/highlightedproducts.css
@@ -62,7 +62,7 @@ div.product-highlight h3.salesCount {
 
 h1.text-decoration-line {
     text-decoration: line-through;
-    color: grey;
+    color: black;
     font-weight: 400;
     text-decoration-color: var(--main-blue-color);
 }
