--- a/css/product.css
+++ b/css/product.css
@@ -24,7 +24,8 @@ div.product-title h1.name {
     font-weight: 700;
 }
 
-div.manufacturer-logo {
+div.product-image {
+    margin: 18px 0px;
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
@@ -33,4 +34,7 @@ div.manufacturer-logo {
 }
 div.product-action-price h1 {
     font-size: 36px;
+}
+div.manufacturer-logo {
+    margin-top: 12px;
 }
