--- a/css/filteredproducts.css
+++ b/css/filteredproducts.css
@@ -136,7 +136,7 @@ p.checkbox-input-text {
 }
 
 /* Custom checkbox */
-.checkbox-container {
+div.checkbox-container {
     display: block;
     position: relative;
     padding-left: 36px;
@@ -146,7 +146,7 @@ p.checkbox-input-text {
     margin-bottom: 6px;
 }
 
-input[type=checkbox] {
+div.checkbox-container input[type=checkbox] {
     position: absolute;
     opacity: 0;
     cursor: pointer;
