--- a/css/aboutus.css
+++ b/css/aboutus.css
@@ -7,11 +7,15 @@
 .aboutus-section h1 {
     margin: 0 auto;
     padding-top: 16px;
+    font-size: 36px;
 }
 
 .aboutus-section h2 {
     margin: 0 auto;
     margin-bottom: 30px;
+    font-size: 22px;
+    color: gray;
+    font-weight: 400;
 }
 
 .aboutus-section p {
