--- a/css/product.css
+++ b/css/product.css
@@ -32,9 +32,35 @@ div.product-image {
     width: 100%;
     height: 480px;
 }
+
 div.product-action-price h1 {
     font-size: 36px;
 }
+
 div.manufacturer-logo {
     margin-top: 12px;
+}
+
+div.product-specifications {
+    padding-top: 24px;
+    padding-bottom: 24px;
+}
+
+table.product-specifications {
+    width: 100%;
+}
+
+table.product-specifications td {
+    padding: 4px 0px 4px 12px;
+    border-bottom: 1px solid lightskyblue;
+}
+
+table.product-specifications tr td:first-child {
+    font-weight: 300;
+    width: 35%;
+}
+
+table.product-specifications tr td:not(:first-child) {
+    width: 65%;
+    font-weight: 400;
 }
