--- a/css/footer.css
+++ b/css/footer.css
@@ -3,6 +3,10 @@ div.footer-padding {
     padding-bottom: 8px;
 }
 
+footer {
+    padding-top: 48px;
+}
+
 footer li {
     float: none;
     padding: 2px;
@@ -28,9 +32,17 @@ footer ul li a:hover {
     padding-top: 46px;
     padding-bottom: 46px;
 }
+
+.footer-section-wrapper {
+    width: 75%;
+    margin: 0 auto;
+    display: flex;
+}
+
 ul.payingmethods {
     display: flex;
 }
+
 ul.payingmethods li {
     float: left;
     padding: 0px;
@@ -49,8 +61,9 @@ ul.payingmethods li:hover img {
     transition: 0.15s;
 }
 
-footer h3 {
+.box h2 {
     padding-bottom: 16px;
+    font-size: var(--p-laptop);
 }
 
 .yourbenefits img {
@@ -74,25 +87,53 @@ ul.socialIcons li:hover img {
     filter: grayscale(0%);
     transition: 0.15s;
 }
+
 p.footer-copyright-text {
     clear: both;
 }
+
 div.newsletter {
     width: 85%;
     margin-top: 30px;
     display: flex;
 }
+
 div.newsletter form {
     width: 100%;
 }
+
 div.newsletter input[type=email] {
     width: 70%;
     margin-right: 6px;
 }
+
 div.newsletter input[type=submit] {
     border-radius: 0;
     background-color: var(--main-blue-color);
     width: 25%;
     font-weight: 400;
     font-size: 14px;
+}
+
+/* Mobile phones */
+@media screen and (max-width: 767px) {}
+
+/* Tablets */
+@media (min-width: 768px) and (max-width: 1199px) {
+    div.footer-section-wrapper {
+        width: 90%;
+    }
+    div.footer-section-wrapper h2 {
+        letter-spacing: 0px;
+        padding-bottom: 12px;
+    }
+    div.footer-section-wrapper li {
+        font-size: var(--p-tablet);
+    }
+    footer {
+        padding-top: 12px;
+    }
+    h2 {
+        font-size: var(--h2-tablet);
+    }
 }
