--- a/css/administration.css
+++ b/css/administration.css
@@ -241,6 +241,60 @@ input[type=submit]:hover {
     margin-left: 12px;
 }
 
+.remove-icon {
+    display: inline-block;
+    height: 30px;
+    margin-top: 8px;
+    margin-right: 8px;
+    cursor: pointer;
+    opacity: 100%;
+    transition: 0.15s;
+}
+
+.remove-icon:hover {
+    animation: shake 0.5s ease-in-out;
+    animation-iteration-count: 1;
+}
+.add-icon:hover {
+    animation: rotate 0.5s ease-in-out;
+    animation-iteration-count: 1;
+}
+
+@keyframes rotate {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(90deg);
+    }
+}
+
+@keyframes shake {
+    0% {
+        transform: translateX(0);
+    }
+
+    20% {
+        transform: translateX(-5px) rotate(-10deg);
+    }
+
+    40% {
+        transform: translateX(4px) rotate(8deg);
+    }
+
+    60% {
+        transform: translateX(-3px) rotate(-5deg);
+    }
+
+    80% {
+        transform: translateX(2px) rotate(3deg);
+    }
+
+    100% {
+        transform: translateX(0);
+    }
+}
+
 /* Product management */
 table.product-edit th,
 td {
